# swap-canister-next

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  canister_ids.json  dfx.json  rust-tollchain.toml  test-archive-token.sh  test-archive.sh  test.sh
canisters/archive-swap/: Cargo.toml  README.md
canisters/archive-swap/sources/: source.did  source_opt.wasm
canisters/archive-swap/src/: http.rs  lib.rs  types.rs
canisters/archive-swap/src/business/: append.rs  block.rs  config.rs  mod.rs  pb.rs  query.rs
canisters/archive-swap/src/common/: apis.rs  did.rs
canisters/archive-swap/src/stable/: business.rs  common.rs  mod.rs
canisters/archive-swap/src/stable/v000/: mod.rs  types.rs
canisters/archive-swap/src/stable/v001/: business.rs  mod.rs  permission.rs  types.rs  upgrade.rs
canisters/archive-swap/src/stable/v001/types/: metrics.rs
canisters/core/: Cargo.toml  README.md
canisters/core/sources/: source.did
canisters/core/src/: types.rs
canisters/core/src/business/: mod.rs  test.rs
canisters/core/src/business/archive/: mod.rs  request.rs  swap.rs  token.rs
canisters/core/src/business/config/: fee_to.rs  maintain.rs  mod.rs  push.rs
canisters/core/src/business/config/blockchain/: mod.rs  swap.rs  token.rs
canisters/core/src/business/pair/: create.rs  liquidity.rs  loan.rs  mod.rs  query.rs  swap.rs
canisters/core/src/business/pair/swap/: got_exact.rs  pay_exact.rs  pay_exact_by_loan.rs  pay_exact_with_deposit.rs  pay_exact_with_deposit2.rs
canisters/core/src/business/token/: deposit.rs  mod.rs  query.rs  transfer.rs  withdraw.rs
canisters/core/src/common/: apis.rs  did.rs
canisters/core/src/services/: archive.rs  icrc2.rs  mod.rs  swap.rs
canisters/core/src/stable/: business.rs  common.rs  mod.rs
canisters/core/src/stable/v000/: mod.rs  permission.rs  schedule.rs  types.rs
canisters/core/src/stable/v001/: business.rs  mod.rs  permission.rs  schedule.rs  types.rs  upgrade.rs
canisters/core/src/stable/v001/types/: balance.rs  fee_to.rs  lp.rs  maintain.rs  pair.rs  token.rs
canisters/core/src/types/business/: config.rs  mod.rs  token.rs
canisters/core/src/types/business/pair/: create.rs  liquidity.rs  loan.rs  mod.rs  swap.rs
canisters/core/src/types/common/: amm.rs  caller.rs  deadline.rs  error.rs  lock.rs  meta.rs  mod.rs  pair.rs  pool.rs  ratio.rs
canisters/core/src/utils/: hash.rs  mod.rs  principal.rs
canisters/swap/: Cargo.toml  README.md
canisters/swap/sources/: source.did
canisters/swap/src/: lib.rs  types.rs
canisters/swap/src/business/: mod.rs  test.rs
canisters/swap/src/business/archive/: mod.rs  request.rs  swap.rs  token.rs
canisters/swap/src/business/config/: custom.rs  fee_to.rs  frozen.rs  maintain.rs  mod.rs  push.rs
canisters/swap/src/business/config/blockchain/: mod.rs  swap.rs  token.rs
canisters/swap/src/business/pair/: create.rs  liquidity.rs  mod.rs  query.rs  remove.rs  swap.rs
canisters/swap/src/business/pair/liquidity/: add.rs  remove.rs  remove_and_withdraw.rs
canisters/swap/src/business/pair/swap/: got_exact.rs  pay_exact.rs  pay_exact_by_loan.rs  pay_exact_with_deposit.rs  pay_exact_with_deposit_async.rs
canisters/swap/src/business/token/: deposit.rs  query.rs  transfer.rs  withdraw.rs
canisters/swap/src/business/token/withdraw/: many.rs
canisters/swap/src/common/: apis.rs  did.rs
canisters/swap/src/services/: archive.rs  icrc2.rs  swap.rs
canisters/swap/src/stable/: business.rs  common.rs  mod.rs
canisters/swap/src/stable/v000/: mod.rs  types.rs
canisters/swap/src/stable/v001/: business.rs  mod.rs  permission.rs  schedule.rs  types.rs
canisters/swap/src/stable/v001/types/: balance.rs  fee_to.rs  pair.rs  request.rs
canisters/swap/src/types/business/: config.rs  token.rs
canisters/swap/src/types/business/pair/: create.rs  create_or_remove.rs  liquidity.rs  mod.rs
canisters/swap/src/types/common/: deadline.rs  lock.rs  meta.rs  mod.rs  pair.rs  pool.rs
canisters/swap/src/utils/: math.rs  owner.rs
canisters/swap/tests/: archive-swap-business.rs  archive-swap-common.rs  archive-token-business.rs  archive-token-common.rs  swap-business-fee.rs  swap-business-to-fee.rs  swap-business-to.rs  swap-business.rs  swap-common.rs  swap-upgrade.rs  test-all.sh  test-archive-swap.sh  test-archive-token.sh  test-swap.sh
canisters/swap/tests/archive_swap/: mod.rs
canisters/swap/tests/archive_token/: mod.rs
canisters/swap/tests/icrc2/: mod.rs
canisters/swap/tests/swap/: mod.rs
common/: Cargo.toml  README.md  build.rs
common/proto/: block.proto  common.proto  swap.proto  token.proto
common/src/: lib.rs
common/src/archive/: mod.rs
common/src/archive/swap/: args.rs  block.rs  mod.rs  operation.rs  query.rs  transaction.rs
common/src/archive/swap/operation/: pair.rs
common/src/archive/swap/operation/pair/: amm.rs  common.rs  create.rs  cumulative.rs  remove.rs  swap.rs
common/src/archive/token/: args.rs  block.rs  mod.rs  operation.rs  query.rs  transaction.rs
common/src/archive/token/operation/: deposit.rs  transfer.rs  withdraw.rs
common/src/archive/token/transaction/: deposit.rs  transfer.rs  withdraw.rs
common/src/common/: account.rs  block.rs  hash.rs  mod.rs  nat.rs  principal.rs  timestamp.rs
common/src/proto/: block.rs  common.rs  mod.rs  swap.rs  test.rs  token.rs
common/src/types/: mod.rs
common/src/types/block/: block.rs  hash.rs  mod.rs  query.rs
common/src/types/common/: account.rs  error.rs  fee.rs  lp.rs  meta.rs  mod.rs  principal.rs  ratio.rs  timestamp.rs  token.rs
common/src/types/common/amm/: amm_constant_product.rs  amm_constant_sum.rs  amm_logarithmic.rs  amm_stable_swap.rs  cpmm.rs  mod.rs
common/src/types/request/: args.rs  index.rs  lock.rs  mod.rs  trace.rs
common/src/types/request/args/: frozen.rs  got_exact.rs  liquidity_add.rs  liquidity_remove.rs  pay_exact.rs  pay_exact_by_loan.rs
common/src/types/swap/: amm.rs  mod.rs  pair.rs
common/src/types/transform/: account.rs  mod.rs  principal.rs
common/src/utils/: hash.rs  math.rs  mod.rs  owner.rs  pb.rs  principal.rs  range.rs  runtime.rs
(+159 files in other folders)
