[package]
name = "swap"
version = "0.0.1"
edition = "2024"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[dependencies]
candid = "0.10.13"
ic-cdk = "0.17.1"
icrc-ledger-types = "0.1.8"

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_bytes = "0.11.17"

ic-canister-kit = { version = "1.0.20", features = [
    "identity",
    "canister",
    "call-once",
    "schedule",
    "stable",
] }

strum = "0.27.1"
strum_macros = "0.27.1"

once_cell = "1.21.3"
hex = "0.4.3"
