[workspace]
members = ["common", "canisters/*"]
resolver = "3"

[workspace.package]
version = "0.0.1"
edition = "2024"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[workspace.lints.rust]
unsafe_code = "forbid"
unreachable_pub = "warn"
missing_docs = "warn"

[workspace.lints.rustdoc]
broken_intra_doc_links = "warn"

[workspace.lints.clippy]
future_not_send = "warn"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[workspace.dependencies]
common = { path = "./common" }

candid = "0.10.13"
ic-cdk = "0.17.1"
icrc-ledger-types = "0.1.8"

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_bytes = "0.11.17"

ic-canister-kit = { version = "1.0.28", features = [
    "identity",
    "canister",
    "call-once",
    "schedule",
    "stable",
] }

strum = "0.27.1"
strum_macros = "0.27.1"

once_cell = "1.21.3"
hex = "0.4.3"
num-bigint = "0.4.6"
sha2 = "0.10.8"
