[workspace]
members = ["common", "canisters/*"]
resolver = "3"

[workspace.package]
version = "0.0.1"
edition = "2024"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[workspace.lints.rust]
unsafe_code = "forbid"
unreachable_pub = "warn"
missing_docs = "warn"

[workspace.lints.rustdoc]
broken_intra_doc_links = "warn"

[workspace.lints.clippy]
future_not_send = "warn"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[workspace.dependencies]
common = { path = "common" }

candid = "0.10.13"
ic-cdk = "0.18.0"
ic-management-canister-types = "0.3.0"
icrc-ledger-types = "0.1.8"
ic-cdk-timers = "0.12.0"
ic-metrics-encoder = "1.1.1"

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_bytes = "0.11.17"

ic-canister-kit = { version = "1.1.0", features = [
    "identity",
    "canister",
    "call-once",
    "schedule",
    "stable",
] }

strum = "0.27.1"
strum_macros = "0.27.1"

thiserror = "2.0.12"
once_cell = "1.21.3"
hex = "0.4.3"
num-bigint = "0.4.6"
sha2 = "0.10.9"
percent-encoding = "2.2"
futures = "0.3"
num-traits = { version = "0.2.19" }

# [dev-dependencies]
pocket-ic = "9.0.0"
# serde_bytes = "0.11.17"
