[package]
name = "common"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"
# crate-type = ["cdylib"] # rust lib 包不能是 cdylib, 否则不能被引入

[lints]
workspace = true

[features]
default = []
archive-token = []
archive-swap = []
full = ["archive-token", "archive-swap"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
icrc-ledger-types = { workspace = true }

serde = { workspace = true }
serde_bytes = { workspace = true }

ic-canister-kit = { workspace = true, features = ["identity"] }

thiserror = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }

prost = "0.13.5" # 处理 protobuf 的代码

[build-dependencies]
prost-build = "0.13.5" # 编译 protobuf build依赖
