[package]
name = "common"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"
# crate-type = ["cdylib"] # The rust lib package cannot be cdylib, otherwise it cannot be introduced

[lints]
workspace = true

[features]
default = []
archive-token = []
archive-swap = []
full = ["archive-token", "archive-swap"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
icrc-ledger-types = { workspace = true }

serde = { workspace = true }
serde_bytes = { workspace = true }

ic-canister-kit = { workspace = true, features = ["identity"] }

thiserror = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }

prost = "0.13.5"

[build-dependencies]
prost-build = "0.13.5"
