[package]
name = "common"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"
# crate-type = ["cdylib"] # The rust lib package cannot be cdylib, otherwise it cannot be introduced

[lints]
workspace = true

[features]
default = []
archive-token = []
archive-swap = []
cdk = ["dep:ic-cdk", "dep:ic-canister-kit"]
full = ["archive-token", "archive-swap", "cdk"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true, optional = true }
icrc-ledger-types = { workspace = true }

ic-canister-kit = { workspace = true, optional = true, features = ["identity"] }

serde = { workspace = true }
serde_bytes = { workspace = true }

once_cell = { workspace = true }
num-bigint = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
num-traits = { workspace = true }

prost = "0.13.5"

[build-dependencies]
prost-build = "0.13.5"
