[package]
name = "archive-swap"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
common = { workspace = true, features = ["archive-swap"] }

candid = { workspace = true }
ic-cdk = { workspace = true }
icrc-ledger-types = { workspace = true }
ic-metrics-encoder = { workspace = true }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_bytes = { workspace = true }

ic-canister-kit = { workspace = true, features = [
    "identity",
    "canister",
    "http",
    "schedule",
    "stable",
] }

strum = { workspace = true }
strum_macros = { workspace = true }

once_cell = { workspace = true }
hex = { workspace = true }
num-bigint = { workspace = true }
sha2 = { workspace = true }
percent-encoding = { workspace = true }
